# jtfs-gpu

./: .gitignore  Batch Normalization.ipynb  CNN Classifier.ipynb  LICENSE.md  Manifold Embedding.ipynb  README.md  Synthesizer Parameter Regression - wav2shape.ipynb  Synthesizer Parameter Regression.ipynb  Time Scattering.ipynb  Time-Frequency Scattering Resynthesis.ipynb  conda-env-kymj.yml  pip-env-kymj.txt  requirements-conda.txt  requirements-pip.txt  requirements.txt  setup.cfg  setup.py  utils.py
.ipynb_checkpoints/: Time Scattering-checkpoint.ipynb
data/: cmap.npy
data/Sx/: 1000.npy  1002.npy  1003.npy  1004.npy  1009.npy  101.npy  1011.npy  1015.npy  1017.npy  1018.npy  1019.npy  102.npy  1022.npy  1023.npy  1024.npy  1026.npy  1029.npy  103.npy  1032.npy  1033.npy  1034.npy  1038.npy  1039.npy  104.npy  1042.npy  1045.npy  1046.npy  1047.npy  1048.npy  1049.npy  1050.npy  (+2025 more)
docs/: index.md
kymatio/: requirements.txt  setup.py
kymjtfs/: batch_norm.py  cnn.py  synth.py  utils.py
notebooks/: CNN Classifier.ipynb  Gradient Field Visualization.ipynb  Manifold Embedding.ipynb  Resynthesis results.ipynb  Resynthesis.ipynb  STRF Isomap on AMFM.ipynb  Synthesizer Parameter Regression - wav2shape.ipynb  Untitled.ipynb  draft.ipynb  k-NN similarity benchmark.ipynb  reconstruction speed comparison.ipynb
nyu/: py_12h_08gb.sbatch
scripts/: isomap.py  process_msdb_features.py  process_msdb_jtfs.py  resynthesis.py  run_doce.py  scale_rate_viz.py  train_cnn.py
strf-like-model/: README.md  auditory.py  demo.py  features.py  plotslib.py  soundTest.aiff  utils.py
(+10275 files in other folders)
