[metadata]
name = kymatio-jtfs
version = attr: pypackage.version.__version__
author = Cyrus Vahidi
author_email = cyrus@pm.com
description = Joint Time-Frequency Scattering with Kymatio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rastegah/kymatio-jtfs
project_urls =
    Bug Tracker = https://github.com/rastegah/kymatio-jtfsissues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = kymjtfs
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = kymjtfs

[options.entry_points]
console_scripts =
    exec_foo = pypackage.code:foo